clusters/demo-000/apps/demoapp-auth/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  name: demoapp-auth-movie
spec:
  ingressClassName: nginx
  rules:
  - host: dev.movie.demoapp-auth.example.com
    http:
      paths:
      - backend:
          service:
            name: demoapp-auth-movie
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dev.movie.demoapp-auth.example.com
    secretName: dev-demoapp-auth-com-tls
